deploy/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-6.1
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        version: v6.1
    spec:
      containers:
      - name: webapp
        image: myregistry.com:5000/web-app:6.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
