deploy/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: webapp-destination
spec: 
  host: webservice
  subsets:
  - name: v1
    labels:
      version: v6.2
  - name: v0
    labels:
      version: v6.0
