deploy/se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata: 
  name: cnn
spec: 
  hosts: 
  - edition.cnn.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
