deploy/vs_rewrite.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: webservice-vs
spec: 
  hosts:
    - webservice
  http:
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /
    route:
    - destination:
        host: webservice
        subset: v1
