deploy/vs_wtdist_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-vs
spec: 
  hosts:
    - webservice
    - webservice.greetings.com
  gateways:
    - webapp-gateway
  http:
  - route:
    - destination:
        host: webservice
        subset: v1
      weight: 25
    - destination:
        host: webservice
        subset: v0
      weight: 75
